# Phase

./: .gitignore  CMakeLists.txt  Phase.cbp  README.md
modules/: CMakeLists.txt  phase.cpp  phaseCoupled.cpp  phaseFractionalStep.cpp  phaseFractionalStepAxisymmetric.cpp  phaseFractionalStepEulerLagrange.cpp  phaseFractionalStepExperimental.cpp  phaseFractionalStepIncremental.cpp  phaseFractionalStepIncrementalMultiphase.cpp  phaseFractionalStepMultiphase.cpp  phaseFractionalStepMultiphaseQuadraticIbm.cpp  phaseFractionalStepQuadraticIbm.cpp  phaseFractionalStepSimple.cpp  phaseFractionalStepSimpleMultiphase.cpp  phaseImmersedBoundary.cpp  phaseMultiphase.cpp  phasePartitionMesh.cpp  phasePartitionTest.cpp  phasePiso.cpp  phasePisoMultiphase.cpp  phasePoisson  phasePoisson.cpp  phaseReconstructSolution.cpp  phaseSimple  phaseSimple.cpp
src/2D/Structured/: CMakeLists.txt
src/2D/Unstructured/: CMakeLists.txt
src/3D/Structured/: CMakeLists.txt
src/Communicator/: CMakeLists.txt  Communicator.cpp  Communicator.h
src/FiniteVolume/: CMakeLists.txt
src/FiniteVolume/BoundaryCondition/: BoundaryCondition.h  CMakeLists.txt
src/FiniteVolume/Discretization/: AdamsBashforth.cpp  AdamsBashforth.h  CMakeLists.txt  Cicsam.cpp  Cicsam.h  CrankNicolson.cpp  CrankNicolson.h  Discretizer.cpp  Discretizer.h  FaceInterpolation.cpp  FaceInterpolation.h  FaceInterpolation.tpp  GradientEvaluation.cpp  GradientEvaluation.h  Hric.cpp  Hric.h  Plic.cpp  Plic.h  Slic.cpp  Slic.h  SourceEvaluation.cpp  SourceEvaluation.h  (+2 more)
src/FiniteVolumeGrid2D/: BilinearInterpolator.cpp  BilinearInterpolator.h  CMakeLists.txt  Cell.cpp  Cell.h  CellGroup.cpp  CellGroup.h  CellSearch.cpp  CellSearch.h  CgnsUnstructuredGrid.cpp  CgnsUnstructuredGrid.h  CgnsUnstructuredQuadGrid.cpp  CgnsUnstructuredQuadGrid.h  ConstructGrid.cpp  ConstructGrid.h  EquidistantGrid2D.cpp  EquidistantGrid2D.h  Face.cpp  Face.h  FiniteVolumeGrid2D.cpp  FiniteVolumeGrid2D.h  FiniteVolumeGrid2D.tpp  FiniteVolumeGrid2DFactory.cpp  FiniteVolumeZone.cpp  FiniteVolumeZone.h  Group.h  Group.tpp  Link.cpp  Link.h  Node.cpp  Node.h  Patch.cpp  Patch.h  QuadraticInterpolator.cpp  QuadraticInterpolator.h  RangeSearch.cpp  RangeSearch.h  RectilinearGrid2D.cpp  RectilinearGrid2D.h  StructuredRectilinearGrid.cpp  (+1 more)
src/Geometry/: BoundingBox.cpp  BoundingBox.h  Box.cpp  Box.h  CMakeLists.txt  Circle.cpp  Circle.h  Geometry.h  Line2D.cpp  Line2D.h  LineSegment2D.cpp  LineSegment2D.h  Point2D.cpp  Point2D.h  Polygon.cpp  Polygon.h  Quadrilateral.cpp  Quadrilateral.h  Search.cpp  Search.h  Search.tpp  Shape2D.cpp  Shape2D.h  Tensor2D.cpp  Tensor2D.h  Triangle.cpp  Triangle.h  Vector2D.cpp  Vector2D.h
src/Math/: Algorithm.h  BilinearInterpolation.cpp  BilinearInterpolation.h  BisectionSearch.cpp  BisectionSearch.h  CMakeLists.txt  CooEquation.cpp  CooEquation.h  CrsEquation.cpp  CrsEquation.h  EigenSparseMatrixSolver.cpp  EigenSparseMatrixSolver.h  Equation.cpp  Equation.h  Factorial.h  HypreMatrix.cpp  HypreMatrix.h  HypreSparseMatrixSolver.cpp  HypreSparseMatrixSolver.h  HypreVector.h  Interpolation.h  InterpolationFunction.cpp  InterpolationFunction.h  LinearInterpolation.cpp  LinearInterpolation.h  Matrix.cpp  Matrix.h  PetscSparseMatrixSolver.cpp  PetscSparseMatrixSolver.h  Poly1D.h  Poly1D.tpp  QuadraticNormalInterpolation.cpp  QuadraticNormalInterpolation.h  SecantSearch.cpp  SecantSearch.h  SparseEntry.h  SparseMatrix.cpp  SparseMatrix.h  SparseMatrixSolver.cpp  SparseMatrixSolver.h  (+16 more)
src/PostProcessing/: CMakeLists.txt  CgnsViewer.h  ContactLineTracker.cpp  ContactLineTracker.h  ForceIntegrator.cpp  ForceIntegrator.h  GhostCellImmersedBoundaryObjectContactLineTracker.cpp  GhostCellImmersedBoundaryObjectContactLineTracker.h  GhostCellImmersedBoundaryObjectForceIntegrator.cpp  GhostCellImmersedBoundaryObjectForceIntegrator.h  IbTracker.cpp  IbTracker.h  ImmersedBoundaryObjectContactLineTracker.cpp  ImmersedBoundaryObjectContactLineTracker.h  ImmersedBoundaryObjectProbe.cpp  ImmersedBoundaryObjectProbe.h  PostProcessing.cpp  PostProcessing.h  PostProcessingObject.cpp  PostProcessingObject.h  ReynoldsNumber.cpp  ReynoldsNumber.h  Viewer.cpp  VolumeIntegrator.cpp  VolumeIntegrator.h
src/Solvers/: CMakeLists.txt  Celeste.cpp  Celeste.h  CelesteStencil.cpp  ConstructSolver.cpp  ConstructSolver.h  ContinuumSurfaceForce.cpp  ContinuumSurfaceForce.h  Coupled.h  CoupledEquation.cpp  FractionalStep.cpp  FractionalStep.h  FractionalStepAxisymmetric.cpp  FractionalStepAxisymmetric.h  FractionalStepBoussinesq.cpp  FractionalStepDirectForcing.cpp  FractionalStepDirectForcing.h  FractionalStepEulerLagrange.cpp  FractionalStepEulerLagrange.h  FractionalStepExperimental.cpp  FractionalStepExperimental.h  FractionalStepIncremental.cpp  FractionalStepIncremental.h  FractionalStepIncrementalMultiphase.cpp  FractionalStepIncrementalMultiphase.h  FractionalStepMultiphase.cpp  FractionalStepMultiphase.h  FractionalStepMultiphaseEulerLagrange.cpp  FractionalStepMultiphaseEulerLagrange.h  FractionalStepMultiphaseQuadraticIbm.cpp  FractionalStepMultiphaseQuadraticIbm.h  FractionalStepQuadraticIbm.cpp  FractionalStepQuadraticIbm.h  FractionalStepSimple.cpp  FractionalStepSimple.h  FractionalStepSimpleMultiphase.cpp  FractionalStepSimpleMultiphase.h  Multiphase.cpp  Multiphase.h  Piso.cpp  (+13 more)
src/System/: CMakeLists.txt  CgnsFile.cpp  CgnsFile.h  CommandLine.cpp  CommandLine.h  Communicator.cpp  Communicator.h  Exception.cpp  Exception.h  Input.cpp  Input.h  NotImplementedException.h  PostProcessingInterface.cpp  PostProcessingInterface.h  RunControl.cpp  RunControl.h  SolverInterface.h  StaticVector.h  StaticVector.tpp  Time.cpp  Time.h  Timer.cpp  Timer.h
test/: CMakeLists.txt  ImmersedBoundaryTest.cpp  MatrixTest.cpp  PlicTest.cpp  PolygonTest.cpp  RangeSearchTest.cpp
tests/: BackwardFacingStepTest.cpp  CMakeLists.txt  GeometryTests.cpp  LidDrivenCavityTest.cpp  MathTests.cpp  SimpleTestFramework.h  main.cpp
utilities/: CMakeLists.txt  PhaseReconstructCompactSolution.cpp  PhaseReconstructSolution.cpp  phasePartitionMesh.cpp  phaseReconstructSolution.cpp
(+715 files in other folders)
