set(HEADERS Discretization/FaceInterpolation.h
        Field/ScalarGradient.h
        Discretization/Cicsam.h
        Discretization/Hric.h
        Discretization/Slic.h
        Discretization/Plic.h
        Equation/IndexMap.h
        Equation/Equation.h
        Equation/FiniteVolumeEquation.h
        Equation/TimeDerivative.h
        Equation/Divergence.h
        Equation/Laplacian.h
        Equation/Source.h
        Field/Field.h
        Field/FiniteVolumeField.h
        Field/ScalarFiniteVolumeField.h
        Field/VectorFiniteVolumeField.h
        Field/TensorFiniteVolumeField.h
        Field/PolygonFiniteVolumeField.h
        Field/ScalarGradient.h
        Field/JacobianField.h
        ImmersedBoundary/ImmersedBoundary.h
        ImmersedBoundary/ImmersedBoundaryObject.h
        ImmersedBoundary/StepImmersedBoundaryObject.h
        ImmersedBoundary/GhostCellImmersedBoundaryObject.h
        ImmersedBoundary/GhostCellStencil.h
        ImmersedBoundary/ContactLineGhostCellStencil.h
        ImmersedBoundary/CutCell.h
        ImmersedBoundary/CutCellLink.h
        ImmersedBoundary/ImmersedBoundaryStencil.h
        ImmersedBoundary/Motion.h
        ImmersedBoundary/TranslatingMotion.h
        ImmersedBoundary/OscillatingMotion.h
        ImmersedBoundary/SolidBodyMotion.h
        ImmersedBoundary/SeoMittal.h
        ImmersedBoundary/QuadraticIbm.h)

set(SOURCES Discretization/FaceInterpolation.tpp
        Discretization/FaceInterpolation.cpp
        Field/ScalarGradient.cpp
        Discretization/Cicsam.cpp
        Discretization/Hric.cpp
        Discretization/Slic.cpp
        Discretization/Plic.cpp
        Equation/IndexMap.cpp
        Equation/Equation.tpp
        Equation/ScalarEquation.cpp
        Equation/VectorEquation.cpp
        Equation/TimeDerivative.cpp
        Equation/Divergence.cpp
        Equation/Laplacian.cpp
        Equation/Source.cpp
        Field/Field.tpp
        Field/FiniteVolumeField.tpp
        Field/ScalarFiniteVolumeField.cpp
        Field/VectorFiniteVolumeField.cpp
        Field/TensorFiniteVolumeField.cpp
        Field/PolygonFiniteVolumeField.cpp
        Field/ScalarGradient.cpp
        Field/JacobianField.cpp
        ImmersedBoundary/ImmersedBoundary.cpp
        ImmersedBoundary/ImmersedBoundaryObject.cpp
        ImmersedBoundary/StepImmersedBoundaryObject.cpp
        ImmersedBoundary/GhostCellImmersedBoundaryObject.cpp
        ImmersedBoundary/ImmersedBoundaryStencil.cpp
        ImmersedBoundary/ContactLineGhostCellStencil.cpp
        ImmersedBoundary/GhostCellStencil.cpp
        ImmersedBoundary/CutCell.cpp
        ImmersedBoundary/CutCellLink.cpp
        ImmersedBoundary/Motion.cpp
        ImmersedBoundary/TranslatingMotion.cpp
        ImmersedBoundary/OscillatingMotion.cpp
        ImmersedBoundary/SolidBodyMotion.cpp
        ImmersedBoundary/SeoMittal.cpp
        ImmersedBoundary/QuadraticIbm.cpp)

add_library(FiniteVolume ${HEADERS} ${SOURCES})